syntax = "proto3";

option go_package = "./pb";

message User{
    string pid = 4;
    string fullname = 1;
    string email = 2;
    string password = 3;
}

message RegisterRequest{
    User user = 1;
}

message RegisterResponse{
    string userid = 1;
    string message = 2;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}


message LoginResponse{
    string userid = 1;
    string token = 2;
    string message = 3;
}

service AuthService{
    rpc RegisterUser(RegisterRequest) returns (RegisterResponse);
    rpc LoginUser (LoginRequest) returns (LoginResponse);
}